# aoc-tool

./: .gitignore  README.md  TODO.txt  pyproject.toml  ruff.toml
aoctool/: main.py  utils.py
aoctool/commands/: compile.py  download.py  run.py  scaffold.py
aoctool/drivers/: __init__.py  _base.py  haskell.py  python.py  rust.py
aoctool/templates/: haskell.jinja2  python.jinja2  rust.jinja2
aoctool/templates/haskell/: Aoc{puzzle.year}{puzzle.day:02d}.hs  Main.hs
aoctool/templates/python/: aoc{puzzle.year}{puzzle.day:02d}.py  main.py
aoctool/templates/rust/: aoc{puzzle.year}{puzzle.day:02d}.rs  main.rs
aoctool/tests/: test_commands.py  test_download.py  test_utils.py
