[tool.poetry]
name = "aoc-tool"
version = "0.1.0"
description = ""
authors = ["Jeremy Silver <jeremys@nessiness.com>"]
readme = "README.md"
packages = [{include = "aoctool"}]

[tool.poetry.dependencies]
python = "^3.11"
advent-of-code-data = "^2.0.1"
jinja2 = "^3.1.2"
toml = "^0.10.2"
poetry = "^1.7.1"
subprocess-tee = "^0.4.1"

[tool.poetry.scripts]
aoctool = "aoctool.main:main"

[tool.mypy]
exclude = [
    "aoctool/templates/.*.py",
    "data/.*",
    "tmp.*",
]

[[tool.mypy.overrides]]
module = "aocd.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

